Template changes and style.css changes for upstream. - Make build list consistent widths for improved readability. - Updates for better mobile support. - Fixed to header (sticky) Include openshift.css which has specific css for custom branding. Include smarterclayton header updates

--- a/gubernator-rh/static/style.css
+++ b/gubernator-rh/static/style.css
@@ -25,10 +25,14 @@ body {
   width: auto;
 }
 #header h1 {
-  font-size: 1.75em;
+  font-size: 1.5em;
   margin: 0;
   padding: 0 15px;
   text-align: center;
+  word-break: break-word;
+}
+#header h1 > a {
+  display: inline-block;
 }
 #header > div {
   display: flex;
@@ -36,11 +40,13 @@ body {
   flex-grow: 1;
 }
 #header h1 > span {
-  font-size: .6em;
+  font-size: .75em;
   display: block;
 }
 #header p {
-  font-size: 12px;
+  font-size: 16px;
+  margin-bottom: 0;
+  margin-top: 6px;
   text-align: center;
 }
 #header p a {
@@ -49,7 +55,7 @@ body {
 }
 @media(max-width: 769px) {
   #header h1 {
-    font-size: 15px;
+    font-size: 16px;
     padding: 0 10px;
     text-align: right;
   }
@@ -58,6 +64,7 @@ body {
     word-break: break-word;
   }
   #header p {
+    font-size: 12px;
     text-align: right;
   }
 }
@@ -196,12 +203,16 @@ label:hover {
 }
 table.pr-dash {
     border-spacing: 0;
+    width: -webkit-fill-available;
 }
 table.pr-dash tbody tr {
     cursor: pointer;
 }
 table.pr-dash tbody tr:nth-child(odd) {
-    background: #EEE;
+    background: #eee;
+}
+table.pr-dash tbody tr:nth-child(even) {
+    background: #dedede;
 }
 table.pr-dash tbody tr:hover {
     background: #e3e9ff;
